Revision history for Parse-MediaWikiDump

1.0.6	Dec 04, 2010
	* Fix for bug #58196 - error "not a MediaWiki link dunp file" due 
	  to absence of 'LOCK TABLES ...' line in link dump file?
	* Added option to pass input to ::Pages constructor via named parameters so
	  that MediaWiki::DumpFile::Compat and ::Pages share the same API 
	* Software is nearly retired, only need more testing on MediaWiki::DumpFile::Compat

1.0.5	Apr 21, 2010 
	* Updated docs pointing people to MediaWiki::DumpFile::Compat

1.0.4	Jan 04, 2010
	* Fixed bug #53361: Incorrectly assigned usernames 
	  with anon edits
	* Added support for getting access to IP of anonymous
	  edits

1.0.3	Nov 21, 2009
	* Fixed bug #51607 "Build failed CPAN smoke test for 
	  for i686pc solaris" by specifying minimum version 
	  numbers for all dependencies in Makefile.PL.
	
1.0.2	Nov 15, 2009
	* Fixed bug #51461 "Warnings During Build" - now
	  the test process squelches the harmless 
	  warning from Test::Memory::Cycle. 

1.0.1	Nov 11, 2009
	* CPAN indexer did not like previous version number

1.0.0	Nov 11, 2009
	* Stable status achieved	
	* Slight speed tweak on character handler for XML
	  parser
	* Added dependency on Devel::Cycle 1.11 as 1.10
	  causes a false positive to be thrown on the 
	  memory leak test

0.98 	Oct 28, 2009
	* Bumped processing speed back up
	* Fixed possible infinite loop scenario	
	* Ordered tests
	* Added test to find circular references

0.97	Oct 23, 2009
	* Fixed all known memory leaks
	* No more Object::Destroyer
	* Cleaned out some old cruft

0.96	Oct 22, 2009
	* Allowed parsing of 0.4 version XML dump files but not
	  support for new features
	* Added in a method to retrieve the version number of
	  the XML dump file

0.95	Oct 14, 2009
	* Found and removed a circular reference but it did not
	  stop the memory leak
	* Fixed bug 50092 - some times $page->text would return
	  a reference to an undefined value
	* Implemented support for compressed file GLOB objects per
	  bug 50241
